<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/off_white"
    android:layout_height="match_parent"
    tools:context=".ui.details.WeatherDetailsActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/titillium_web_semibold"
                android:gravity="center"
                android:padding="16dp"
                android:text="Pune, IN"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="@string/label_description"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/descriptionTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="Clear Sky"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="@string/label_temperatur"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/temperatureTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="18 C"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="@string/label_feels_like"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/feelsLikeTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="16 C"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="@string/label_pressure"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pressureTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="1293 hgh"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="@string/label_humidity"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/humidityTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="47 KL"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="@string/label_date_logged"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dateTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titillium_web_light"
                    android:gravity="center"
                    android:text="Thu, 10 Mar 20, 04:30 PM"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>